Java 17 does not support getFirst()